tests/NormalTests/paczka1/small_fuzzy/25756472.err
Error in line 1: S257 S123 87,3
Error in line 12: qEIp8evx S123 19,76
